[package]
name = "github-issues-export"
version = "0.1.5"
authors = ["boxdot <d@zerovolt.org>"]
description = "Export GitHub issues to markdown files."
license = "MIT/Apache-2.0"
repository = "https://github.com/boxdot/github-issues-export-rs"
keywords = ["markdown", "github", "issues"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.60"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenvy = "0.15.0"
futures = "0.3.21"
handlebars = "4.3.3"
headers = "0.4.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
slug = "0.1.4"
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
